{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 21,
  "lineage": "ae498aff-8732-c9ae-d29b-e1a286eef16f",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkInterfaces/myproj-nic-0",
            "internal_domain_name_suffix": "0q5gxdx22xguxmv14fqc51kved.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myproj-ipconfig",
                "primary": true,
                "private_ip_address": "10.4.0.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/virtualNetworks/myproj-vnet/subnets/myproj-subnet"
              }
            ],
            "location": "centralindia",
            "name": "myproj-nic-0",
            "private_ip_address": "10.4.0.6",
            "private_ip_addresses": [
              "10.4.0.6"
            ],
            "resource_group_name": "myproj-resources",
            "tags": {
              "environment": "dev",
              "owner": "Spreeha Dutta",
              "project": "udacity"
            }
          },
          "dependencies": [
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkInterfaces/myproj-nic-1",
            "internal_domain_name_suffix": "0q5gxdx22xguxmv14fqc51kved.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myproj-ipconfig",
                "primary": true,
                "private_ip_address": "10.4.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/virtualNetworks/myproj-vnet/subnets/myproj-subnet"
              }
            ],
            "location": "centralindia",
            "name": "myproj-nic-1",
            "private_ip_address": "10.4.0.4",
            "private_ip_addresses": [
              "10.4.0.4"
            ],
            "resource_group_name": "myproj-resources",
            "tags": {
              "environment": "dev",
              "owner": "Spreeha Dutta",
              "project": "udacity"
            }
          },
          "dependencies": [
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkInterfaces/myproj-nic-2",
            "internal_domain_name_suffix": "0q5gxdx22xguxmv14fqc51kved.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "myproj-ipconfig",
                "primary": true,
                "private_ip_address": "10.4.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/virtualNetworks/myproj-vnet/subnets/myproj-subnet"
              }
            ],
            "location": "centralindia",
            "name": "myproj-nic-2",
            "private_ip_address": "10.4.0.5",
            "private_ip_addresses": [
              "10.4.0.5"
            ],
            "resource_group_name": "myproj-resources",
            "tags": {
              "environment": "dev",
              "owner": "Spreeha Dutta",
              "project": "udacity"
            }
          },
          "dependencies": [
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]"
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkInterfaces/myproj-nic-0|/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkSecurityGroups/myproj-nsg",
            "network_interface_id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkInterfaces/myproj-nic-0",
            "network_security_group_id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkSecurityGroups/myproj-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkInterfaces/myproj-nic-1|/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkSecurityGroups/myproj-nsg",
            "network_interface_id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkInterfaces/myproj-nic-1",
            "network_security_group_id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkSecurityGroups/myproj-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkInterfaces/myproj-nic-2|/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkSecurityGroups/myproj-nsg",
            "network_interface_id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkInterfaces/myproj-nic-2",
            "network_security_group_id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkSecurityGroups/myproj-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.main",
            "azurerm_network_security_group.main",
            "azurerm_subnet.main",
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkSecurityGroups/myproj-nsg",
            "location": "centralindia",
            "name": "myproj-nsg",
            "resource_group_name": "myproj-resources",
            "security_rule": [],
            "tags": {
              "environment": "dev",
              "owner": "Spreeha Dutta",
              "project": "udacity"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "blockinternet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkSecurityGroups/myproj-nsg/securityRules/BlockAllInternet",
            "name": "BlockAllInternet",
            "network_security_group_name": "myproj-nsg",
            "priority": 130,
            "protocol": "*",
            "resource_group_name": "myproj-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.4.0.0/16",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/networkSecurityGroups/myproj-nsg/securityRules/AllowTrafficWithinVNET",
            "name": "AllowTrafficWithinVNET",
            "network_security_group_name": "myproj-nsg",
            "priority": 120,
            "protocol": "Tcp",
            "resource_group_name": "myproj-resources",
            "source_address_prefix": "10.4.0.0/16",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "myproj-azure-project1",
            "fqdn": "myproj-azure-project1.centralindia.cloudapp.azure.com",
            "id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/publicIPAddresses/myproj-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.235.88.155",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "myproj-pip",
            "resource_group_name": "myproj-resources",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev",
              "owner": "Spreeha Dutta",
              "project": "udacity"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.4.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/virtualNetworks/myproj-vnet/subnets/myproj-subnet",
            "name": "myproj-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "myproj-resources",
            "virtual_network_name": "myproj-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.main",
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.4.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8e6b3ed4-e5fc-4bcd-b2bb-f1602fed5523",
            "id": "/subscriptions/ca6c2f62-ceeb-4390-9499-3ff99c07eec3/resourceGroups/myproj-resources/providers/Microsoft.Network/virtualNetworks/myproj-vnet",
            "location": "centralindia",
            "name": "myproj-vnet",
            "resource_group_name": "myproj-resources",
            "tags": {
              "environment": "dev",
              "owner": "Spreeha Dutta",
              "project": "udacity"
            }
          },
          "dependencies": [
            "data.azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}